[package]
name = "nestedsocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-socks5 = "0.8"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
structopt = "0.3"
env_logger = "0.10"
log = "0.4"
anyhow = "1"
thiserror = "1"
